syntax = "proto3";

package ipc;

option go_package = "./;bspm";

import "google/protobuf/empty.proto";

service BSPM {
  rpc MonocleModeToggle(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc MonocleModeCycle(MonocleModeCycleRequest) returns (google.protobuf.Empty);
  rpc MonocleModeSubscribe(MonocleModeSubscribeRequest) returns (stream MonocleModeSubscribeResponse);
}

message MonocleModeCycleRequest {
  CycleDir cycle_direction = 1;
}

message MonocleModeSubscribeRequest {
  MonocleModeSubscriptionType type = 1;
}

message MonocleModeSubscribeResponse {
  oneof subscription_type {
    int32 node_count = 1;
  }
}

enum MonocleModeSubscriptionType {
  MONOCLE_MODE_SUBSCRIPTION_TYPE_INVALID = 0;
  MONOCLE_MODE_SUBSCRIPTION_TYPE_NODE_COUNT = 1;
}

enum CycleDir {
  CYCLE_DIR_INVALID = 0;
  CYCLE_DIR_PREV = 1;
  CYCLE_DIR_NEXT = 2;
}

